correction slideshow + mise en place version mobile

--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -1,38 +1,56 @@
-.slideshow-container{
-    margin-bottom: 1%;
+.slideshow-container {
+  margin-bottom: 1%;
+  position: relative;
 }
 
-.img-pictures{
-    width: 100%;
-    border-radius: 30px;
-    height: 600px;
-    object-fit: cover;
-    object-position: 16% 50%;
-    overflow: hidden;
+.img-pictures {
+  width: 100%;
+  border-radius: 30px;
+  height: 600px;
+  object-fit: cover;
+  object-position: 16% 50%;
+  overflow: hidden;
 }
 
-.chevron-right{
-    position: absolute;
-    right: 70px;
-    top: 410px;
-    color:white;
-    font-size: 80px;
+.chevrons {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  z-index: 10;
+  pointer-events: none;
+  box-sizing: border-box;
+
+  img {
+    height: 80px;
+    pointer-events: auto;
+  }
 }
 
-.chevron-left{
-    position: absolute;
-    text-align: left;
-    left: 70px;
-    top: 425px;
-    font-size: 80px;
-    color: white;
+.active-counter {
+  color: white;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  z-index: 10;
 }
 
-span{
-    color: white;
-    position: absolute;
-    right: 50%;
-    top: 700px;
-    font-size: 20px;
-}
+@media (max-width: 767.98px) {
+  .img-pictures {
+    height: 40vh;
+  }
 
+  .chevrons {
+    display: flex;
+    justify-content: space-between;
+  }
+  .active-counter {
+    display: none;
+  }
+}
