--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -22,4 +22,8 @@
     flex-direction: column;
     background-color: transparent;
   }
+
+  .cardsContainer a {
+    width: 100%;
+  }
 }
